--- a/fast-manip.tex
+++ b/fast-manip.tex
@@ -671,10 +671,6 @@ cost objective (\ref{eqn:execution-cost-objective}).
 However, as we motivated in the introduction,
 we are actually also looking to minimize time to compute a solution.
 
-The first graph planner to explicitly include an estimate of remaining
-computational planning effort in a best-first search
-was A$_\epsilon^*$ \cite{pearl1982semiadmissible}.
-
 Therefore, we introduce a new planning-time objective $f_p$
 which penalizes time spent evaluating edges along a potential path:
 \begin{equation}
@@ -690,6 +686,9 @@ This uses a new heuristic $\hat{p}(e)$ which estimates the cost
 associated with evaluating an edge.
 This could be planning time, computational energy required, etc.
 
+The first graph planner to explicitly include an estimate of remaining
+computational planning effort in a best-first search
+was A$_\epsilon^*$ \cite{pearl1982semiadmissible}.
 While the approach we take is different from that of
 \cite{pearl1982semiadmissible},
 a motivating quote from this paper is relevant:
@@ -873,6 +872,54 @@ See Figure~\ref{fig:bean} and Figure~\ref{fig:herb-comparison-cdfs}.
 
 I hope to show that the Greedy PRM is competitive with RRT-Connect
 in terms of planning effort required to find a feasible path.
+
+
+
+\begin{figure}
+\centering
+\begin{subfigure}[b]{0.3\textwidth}
+\includegraphics[width=\textwidth]{figs/compare-2d-rrtc1-rrtextcon-r1-s1.png}
+\caption{RRT Ext-Con, R=1}
+\end{subfigure}%
+\quad
+\begin{subfigure}[b]{0.3\textwidth}
+\includegraphics[width=\textwidth]{figs/compare-2d-rrtc1-rrtconcon-r1-s1.png}
+\caption{RRT Con-Con, R=1}
+\end{subfigure}%
+\quad
+\begin{subfigure}[b]{0.3\textwidth}
+\includegraphics[width=\textwidth]{figs/compare-2d-rrtc1-checkmask-l00-s1.png}
+\caption{Greedy PRM, $\lambda=0$}
+\end{subfigure}%
+\vspace{0.05in}
+\begin{subfigure}[b]{0.3\textwidth}
+\includegraphics[width=\textwidth]{figs/compare-2d-rrtc1-rrtextcon-r6-s1.png}
+\caption{RRT Ext-Con, R=6}
+\end{subfigure}%
+\quad
+\begin{subfigure}[b]{0.3\textwidth}
+\includegraphics[width=\textwidth]{figs/compare-2d-rrtc1-rrtconcon-r6-s1.png}
+\caption{RRT Con-Con, R=6}
+\end{subfigure}%
+\quad
+\begin{subfigure}[b]{0.3\textwidth}
+\includegraphics[width=\textwidth]{figs/compare-2d-rrtc1-checkmask-l10-s1.png}
+\caption{Greedy PRM, $\lambda=1$}
+\end{subfigure}%
+\caption{Example runs with different planners,
+   with the same sequence of samples.
+   Note that Greedy PRM $\lambda=0$ is equivalent to LazyPRM.
+   Red dots show collision checks.}
+\label{fig:compare-2d-rrtc1-vis}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=0.8\textwidth]{figs/compare-2d-rrtc1-medians.png}
+\caption{Plot of collision checks vs solution path cost for the
+   different algorithms from the problem from
+   Figure~\ref{fig:compare-2d-rrtc1-vis}.}
+\end{figure}
 
 \begin{figure}
 \centering
